@@ -75,6 +75,7 @@
       - Added site-specific mapping groups and related command
         changes. [b6]
       - Added 'timeout' and 'timeoutlen' options. [b6]
+      - Added n_{, n_}, n_[, and n_] mappings. [b7]
       - Added <A-b> to execute a builtin mapping. [b6]
       - Added <A-m>l and <A-m>s to aid in the construction of
         macros. [b6]
@@ -185,11 +186,13 @@
       - Added 'autocomplete' option for specifying which completion
         groups should be auto-completed. [b2]
       - Added 'banghist' option. [b1]
+      - Added 'cookies', 'cookieaccept', and 'cookielifetime' options. [b3]
       - Added 'downloadsort' option. [b7]
       - Replaced 'focuscontent' with 'strictfocus'. [b1]
       - Made 'strictfocus' a [sitemap]. [b7]
       - 'complete' now defaults to "slf" but file completion only
         triggers when the URL begins as above. [b1]
+      - Added 'jumptags' option. [b7]
       - Added 's' flag to 'pageinfo' and changed default value. [b7]
       - Added 'passkeys' option. [b3]
       - Added 'passunknown' option. [b7]
@@ -197,7 +200,6 @@
       - Added "passwords" and "venkman" dialogs to :dialog. [b2]
       - Make 'showmode' a [stringlist] option. [b7]
       - Added 'wildanchor' option. [b2]
-      - Added 'cookies', 'cookieaccept', and 'cookielifetime' options. [b3]
     • Added BookmarkChange, BookmarkRemove autocommands. [b2]
     • Removed the :source line at the end of files generated by
       :mkpentadactylrc. [b2]
